# gpt-python-examples

./: .gitignore  README.md  autogen.json  pyproject.toml
.devcontainer/: devcontainer.json
autogen/: hello.ipynb
azure_langchain/: python_repl.ipynb  sqlchain.ipynb
azure_openai/: add_your_data.ipynb  chat_completion_gpt35turbo.ipynb  chat_completions_gpt35turbo.ipynb  chat_completions_managedid.ipynb  chat_completions_stream.ipynb  completions_gpt3.ipynb  dall-e.ipynb  embedding.ipynb  function_calling.ipynb  model_list.ipynb
openai/: chat_completion_gtp35turbo.ipynb  chat_completions_gtp35turbo.ipynb  function_calling.ipynb  moderation.ipynb  openai_chat_completion_gtp34.ipynb
