[tool.poetry]
name = "gpt-python-examples"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gpt_python_examples"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pillow = "^10.0.0"
openai = "^0.27.8"
azure-identity = "^1.13.0"
langchain = "^0.0.308"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
